##Text encoding: utf-8

2010-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* README: updated for 0.12.
	* configure.ac: post release version bump (0.11.91).
	* docs/help/paint/C/gchempaint.xml: some updates.
	* libs/gccv/structs.h: API docs.
	* libs/gcp/about.cc: updated copyright.
	* libs/gcp/bond.cc: cleaned out obsolete code.
	* libs/gcp/tool.cc: fixed cursor after deactivation.
	* libs/gcu/print-setup-dlg.cc: fixed footer widgets sensitivity.
	* programs/3d/window.cc: updated copyright.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/spectra/window.cc: ditto.
	* programs/table/gchemtable-app.cc: ditto.

2010-04-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: change version to 0.11.90.
	* database/Makefile.am: change space-groups.xml to space-groups.xml.in.
	* database/space-groups.xml: ditto.
	* libs/gccv/arrow.cc: fixed compilation warnings.
	* libs/gccv/circle.cc: ditto.
	* libs/gccv/client.cc: ditto.
	* libs/gccv/hash.cc: ditto.
	* libs/gccv/item-client.cc: ditto.
	* libs/gccv/item.cc: ditto.
	* libs/gccv/line.cc: ditto.
	* libs/gccv/poly-line.cc: ditto.
	* libs/gccv/rectangle.cc: ditto.
	* libs/gccv/squiggle.cc: ditto.
	* libs/gccv/text.cc: ditto.
	* libs/gccv/wedge.cc: ditto.
	* libs/gcp/fragment.cc: fixed charge checking.
	* libs/gcp/text-object.cc: fixed cursor position after undo/redo.
	* libs/gcp/text.cc: ditto.
	* libs/gcp/tool.cc: fixed compilation warnings.
	* plugins/paint/atoms/orbitaltool.cc: ditto.
	* plugins/paint/text/fragmenttool.cc: ditto.
	* plugins/paint/text/texttool.cc: restore chemistry into texts pasting.

2010-04-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/Makefile.am: add space groups from BODR since the original is
	a bit buggy.
	* database/space-groups.xml: ditto.
	* libs/gcu/crystaldoc.cc: add an auto flag for the sapece group.
	* libs/gcu/crystaldoc.h: ditto.
	* libs/gcu/spacegroup.cc: load groups from our database, not BODR.