@@ -1,6 +1,6 @@
 AC_PREREQ(2.64)
 
-AC_INIT([gnome-chemistry-utils], [0.11.90], [http://savannah.nongnu.org/bugs/?group=gchemutils],[gchemutils],[http://gchemutils.nongnu.org/])
+AC_INIT([gnome-chemistry-utils], [0.11.91], [http://savannah.nongnu.org/bugs/?group=gchemutils],[gnome-chemistry-utils],[http://gchemutils.nongnu.org/])
 AC_CONFIG_SRCDIR([libs/gcu/gcuperiodic.c])
 AM_INIT_AUTOMAKE([1.11.1 dist-bzip2])
 AM_MAINTAINER_MODE
