@@ -4,7 +4,7 @@
  * Gnome Chemistry Utils
  * gccv/item-client.h 
  *
- * Copyright (C) 2008 Jean Bréfort <jean.brefort@normalesup.org>
+ * Copyright (C) 2008-2010 Jean Bréfort <jean.brefort@normalesup.org>
  *
  * This program is free software; you can redistribute it and/or 
  * modify it under the terms of the GNU General Public License as 
@@ -25,16 +25,32 @@
 #ifndef GCCV_ITEM_CLIENT_H
 #define GCCV_ITEM_CLIENT_H
 
+/*!\file*/
 #include <gcu/macros.h>
 
 namespace gccv {
 
 class Item;
 
+/*!
+\brief the base class for objects associated with a canvas item.
+
+The ItemClient class is a base class used to associate document objects to items
+in the canvas. The associated item might be a Group, and the client might be
+registered for all group children. If several items are associated to the same
+object, the m_Item member should be the toplevel group. Destroying an
+ItemClient instance will destroy the item.
+*/
 class ItemClient {
 friend class Item;
 public:
+/*!
+The constructor.
+*/
 	ItemClient ();
+/*!
+The destructor. Deletes the associated item if any.
+*/
 	virtual ~ItemClient ();
 
 /*!
@@ -48,14 +64,21 @@ unless the application uses another mechanism.
 */
 	virtual void UpdateItem ();
 /*!
-@param state the selection state of the Object.
+\param state the selection state of the Object.
 
 Used to set the selection state of the Object inside the widget. The values of state are application dependant and have no
 default value.
 */
 	virtual void SetSelected (int state);
 
-GCU_PROT_POINTER_PROP (Item, Item)
+/*!\var m_Item
+The associated item. Being protected, it can be set only from derived classes.
+*/
+/*!\fn GetItem()
+\return the associated item.
+*/
+
+	GCU_PROT_POINTER_PROP (Item, Item)
 };
 
 }
