@@ -250,6 +250,7 @@
         <child internal-child="action_area">
           <object class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
+            <property name="layout_style">edge</property>
             <child>
               <object class="GtkButton" id="help">
                 <property name="label">gtk-help</property>
