@@ -1,5 +1,16 @@
 ##Text encoding: utf-8
 
+2010-04-15  Jean Bréfort  <jean.brefort@normalesup.org>
+	* docs/reference/Doxyfile.in: minor update.
+	* docs/help/paint/C/gchempaint.xml: more help updating.
+	* libs/gccv/arrow.h: API documentation work.
+	* libs/gccv/item-client.h: ditto.
+	* libs/gccv/item.h: ditto.
+	* libs/gcp/operation.cc: minor typography update.
+	* plugins/paint/atoms/orbital-prop.ui: fixed help button position.
+	* plugins/paint/atoms/orbital.cc: don't crash when closig the properties
+	box. [#29559] 
+
 2010-04-14  Jean Bréfort  <jean.brefort@normalesup.org>
 	* README: updated for 0.12.
 	* configure.ac: post release version bump (0.11.91).
